--- a/oxidized/frontend/layout.css
+++ b/oxidized/frontend/layout.css
@@ -878,3 +878,7 @@ body.privacy-mode .message-sender,
 body.privacy-mode .reply-input {
     font-family: 'Flow Rounded', sans-serif !important;
 }
+
+body.privacy-mode .contact-photo {
+    filter: blur(8px);
+}
